--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <div style="border: 1px solid var(--gold); padding: 5px; background: #111;">
         <iframe 
             style="width:100%; height:350px; border:0; display: block;" 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3926.243577316719!2d76.1914563!3d10.2419444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7ef343d937a3b%3A0xc621b447781b0f1b!2sCosmopolitan%20Hall!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin"
+src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3926.555260383979!2d76.1655756!3d10.2242644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b081951c01ddd39%3A0xf5de2005911cfc9d!2sCosmopolitan%20Convention%20Center!5e0!3m2!1sen!2sin!4v1738000000000"
             allowfullscreen="" 
             loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade">
